--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="practice2.html">CSS</a></li>
             <li><a href="practice3.html">Javascript</a></li>
         </ol>
-    <h2>WEB</h1>
+    <h2>Hello World</h1>
         
     <p>
         The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.[1]
